# mcp-excel-reader-server

./: README.md  pyproject.toml  requirements.txt
src/excel_reader_server/: __init__.py  server.py
